<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/google_pixe"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent"
android:backgroundTint="@color/theme"
    android:background="@drawable/back_gradient"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        />
    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/ic_title"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/enter_your_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:gravity="top"
        android:text="enter your Collage"
        android:textSize="32dp"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        >
    <TextView
        android:id="@+id/block_"
        android:layout_width="84dp"
        android:layout_height="33dp"
        android:text="@string/block_"
        android:textAppearance="@style/block_"
        android:gravity="top"
        />

        <Spinner
            android:id="@+id/spBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:background="@drawable/ic_selectblock"
            android:entries="@array/block_array"
            android:prompt="@string/block_prompt"
            android:spinnerMode="dropdown" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="50dp"
        >
    <TextView
        android:id="@+id/collage_"
        android:layout_width="97dp"
        android:layout_height="33dp"
        android:text="@string/collage_"
        android:textAppearance="@style/collage_"
        android:gravity="top"
        />

    <Spinner
        android:id="@+id/spCollage"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:background="@drawable/ic_selectcollage"
        android:entries="@array/collage_array"
        android:prompt="@string/collage_prompt"
        />
    </LinearLayout>


    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_next"

      />

</LinearLayout>