<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/google_pixe"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:background="#F5FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#FAA4A4"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_highlight_off_black_24dp"
                android:backgroundTint="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:text="Edit Profile"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginLeft="215dp"
                android:background="@drawable/ic_done_black_24dp"
                android:backgroundTint="#000000" />

        </LinearLayout>

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="90dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="#FAA4A4" />

        <TextView
            android:id="@+id/changePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="Change Profile Picture"
            android:textColor="#FAA4A4"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/following_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/following_"
                android:textAppearance="@style/followers_"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nfollow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="10"
                android:textAppearance="@style/followers_"
                android:textColor="#F7757373" />


            <TextView
                android:id="@+id/followers_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:text="@string/followers_"
                android:textAppearance="@style/followers_"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/nfollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="10"
                android:textAppearance="@style/followers_"
                android:textColor="#F7757373" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAppearance="@style/normal"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/pUsername"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_profileinp"
                    android:backgroundTint="#FAA4A4"
                    android:hint="Username"
                    android:paddingLeft="7dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="91dp"
                    android:layout_height="27dp"
                    android:text="@string/name"
                    android:textAppearance="@style/normal"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/pName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_profileinp"
                    android:backgroundTint="#FAA4A4"
                    android:hint="full name"
                    android:paddingLeft="7dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="91dp"
                    android:layout_height="27dp"

                    android:text="@string/email"
                    android:textAppearance="@style/normal"
                    android:textColor="#FC000000" />

                <EditText
                    android:id="@+id/pEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_profileinp"
                    android:backgroundTint="#FAA4A4"
                    android:hint="Email Address"
                    android:paddingLeft="7dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="91dp"
                    android:layout_height="27dp"
                    android:text="@string/phone"
                    android:textAppearance="@style/normal"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/pPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_profileinp"
                    android:backgroundTint="#FAA4A4"
                    android:hint="phone number"
                    android:paddingLeft="7dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/about"
                    android:layout_width="91dp"
                    android:layout_height="27dp"

                    android:text="@string/about"
                    android:textAppearance="@style/normal"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/pAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_profileinp"
                    android:backgroundTint="#FAA4A4"
                    android:hint="Bio"
                    android:inputType="textMultiLine"
                    android:maxLines="2"
                    android:minLines="1"
                    android:paddingLeft="7dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>